--- a/gitops/apps/home-assistant/configuration/dashboards/subway.yaml
+++ b/gitops/apps/home-assistant/configuration/dashboards/subway.yaml
@@ -277,19 +277,17 @@ views:
   - title: Dynamic
     icon: mdi:map-marker-radius
     cards:
-      - type: conditional
-        conditions:
-          - entity: device_tracker.pixel_9_pro_xl
-            state_not: "work"
+      - type: custom:auto-entities
         card:
-          type: custom:auto-entities
-          card:
-            type: entities
-            title: To Work (Atlantic Av - N/Q/D)
-            icon: mdi:briefcase
-            show_header_toggle: false
-          filter:
-            template: |
+          type: entities
+          title: To Work (Atlantic Av - N/Q/D)
+          icon: mdi:briefcase
+          show_header_toggle: false
+        filter:
+          template: |
+            {% set current = states('device_tracker.pixel_9_pro_xl') %}
+            {% set last = states('input_text.alex_last_significant_zone') %}
+            {% if (current == 'home') or (current != 'work' and last == 'home') %}
               [
                 {% for state in states.sensor -%}
                   {%- if state.attributes.friendly_name is defined and ('Atlantic Av' in state.attributes.friendly_name or 'Barclays' in state.attributes.friendly_name) and state.attributes.route_id in ['N', 'Q', 'D'] and state.state not in ['unavailable', 'unknown'] -%}
@@ -304,23 +302,25 @@ views:
                   {%- endif -%}
                 {%- endfor %}
               ]
-          sort:
-            method: state
-            numeric: true
+            {% else %}
+              []
+            {% endif %}
+        show_empty: false
+        sort:
+          method: state
+          numeric: true
 
-      - type: conditional
-        conditions:
-          - entity: device_tracker.pixel_9_pro_xl
-            state: "work"
+      - type: custom:auto-entities
         card:
-          type: custom:auto-entities
-          card:
-            type: entities
-            title: To Home (57 St - N/Q/R/W)
-            icon: mdi:home
-            show_header_toggle: false
-          filter:
-            template: |
+          type: entities
+          title: To Home (57 St - N/Q/R/W)
+          icon: mdi:home
+          show_header_toggle: false
+        filter:
+          template: |
+            {% set current = states('device_tracker.pixel_9_pro_xl') %}
+            {% set last = states('input_text.alex_last_significant_zone') %}
+            {% if (current == 'work') or (current != 'home' and last == 'work') %}
               [
                 {% for state in states.sensor -%}
                   {%- if state.attributes.friendly_name is defined and '57 St' in state.attributes.friendly_name and state.attributes.route_id in ['N', 'Q', 'R', 'W'] and state.state not in ['unavailable', 'unknown'] -%}
@@ -335,6 +335,10 @@ views:
                   {%- endif -%}
                 {%- endfor %}
               ]
-          sort:
-            method: state
-            numeric: true
+            {% else %}
+              []
+            {% endif %}
+        show_empty: false
+        sort:
+          method: state
+          numeric: true
