--- a/gitops/apps/home-assistant/helpers-input-text-configmap.yaml
+++ b/gitops/apps/home-assistant/helpers-input-text-configmap.yaml
@@ -3,6 +3,12 @@ kind: ConfigMap
 metadata:
   name: homeassistant-helpers-input-text
 data:
+  alex_last_significant_zone.yaml: |
+    alex_last_significant_zone:
+      name: "Alex Last Significant Zone"
+      initial: "home"
+      max: 50
+    
   event_image_location.yaml: |
     # Global input_text helper for pet detection event location
     event_image_location:
