--- a/gitops/apps/home-assistant/automations-configmap.yaml
+++ b/gitops/apps/home-assistant/automations-configmap.yaml
@@ -180,7 +180,9 @@ data:
     mode: "restart"
     triggers:
       - trigger: "state"
-        entity_id: "device_tracker.brayan_iphone"
+        entity_id:
+          - "device_tracker.brayan_iphone"
+          - "device_tracker.eirill_iphone"
         from: "home"
     actions:
       - action: "light.turn_on"
@@ -198,7 +200,9 @@ data:
     mode: "restart"
     triggers:
       - trigger: "state"
-        entity_id: "device_tracker.brayan_iphone"
+        entity_id:
+          - "device_tracker.brayan_iphone"
+          - "device_tracker.eirill_iphone"
         to: "home"
     actions:
       - action: "light.turn_off"
