--- a/gitops/apps/home-assistant/scripts-configmap.yaml
+++ b/gitops/apps/home-assistant/scripts-configmap.yaml
@@ -113,21 +113,21 @@ data:
             message: "Created scene '{{ scene_full_id }}' ({{ scene_name }}) from {{ lights_list | length }} light(s): {{ lights_list }}"
     
   debug_set_last_intruder.yaml: |
-    alias: "Debug - Set Last Intruder Image"
-    mode: single
-    icon: mdi:bug
-    sequence:
-      - action: input_text.set_value
-        target:
-          entity_id: input_text.intruder_image_location
-        data:
-          value: "bedroom"
-      - action: input_text.set_value
-        target:
-          entity_id: input_text.intruder_image_timestamp
-        data:
-          value: "20251124_163149"
-    
+    debug_set_last_intruder:
+      alias: "Debug - Set Last Intruder Image"
+      mode: single
+      icon: mdi:bug
+      sequence:
+        - action: input_text.set_value
+          target:
+            entity_id: input_text.intruder_image_location
+          data:
+            value: "bedroom"
+        - action: input_text.set_value
+          target:
+            entity_id: input_text.intruder_image_timestamp
+          data:
+            value: "20251124_163149"
   power_on.yaml: |
     scheduled_light_on:
       alias: "Scheduled Light On (safe)"
