--- a/gitops/apps/home-assistant/configuration/automations/alex_update_last_zone.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/alex_update_last_zone.yaml
@@ -3,25 +3,31 @@ mode: queued
 triggers:
   - trigger: state
     entity_id: device_tracker.pixel_9_pro_xl
-    to: "home"
-  - trigger: state
-    entity_id: device_tracker.pixel_9_pro_xl
-    to: "work"
   - trigger: homeassistant
     event: start
 variables:
   current_zone: >-
     {% if trigger.platform == 'state' %}
-      {{ trigger.to_state.state }}
+      {{ trigger.to_state.state | lower }}
     {% else %}
-      {{ states('device_tracker.pixel_9_pro_xl') }}
+      {{ states('device_tracker.pixel_9_pro_xl') | lower }}
     {% endif %}
-conditions:
-  - condition: template
-    value_template: "{{ current_zone in ['home', 'work'] }}"
 actions:
-  - action: input_text.set_value
-    target:
-      entity_id: input_text.alex_last_significant_zone
+  - service: logbook.log
     data:
-      value: "{{ current_zone }}"
+      name: "Alex Last Zone Debug"
+      message: "Detected zone change to: {{ current_zone }}"
+  - choose:
+      - conditions:
+          - condition: template
+            value_template: "{{ current_zone in ['home', 'work'] }}"
+        sequence:
+          - action: input_text.set_value
+            target:
+              entity_id: input_text.alex_last_significant_zone
+            data:
+              value: "{{ current_zone }}"
+          - service: logbook.log
+            data:
+              name: "Alex Last Zone Update"
+              message: "Updated last significant zone to: {{ current_zone }}"
