--- a/gitops/apps/home-assistant/automations-configmap.yaml
+++ b/gitops/apps/home-assistant/automations-configmap.yaml
@@ -12,16 +12,7 @@ data:
         zone: "zone.home"
         event: "leave"
     actions:
-      - action: "light.turn_on"
-        target:
-          entity_id:
-            - "light.bedroom_status_led"
-            - "light.living_room_status_led"
-      - action: "switch.turn_off"
-        target:
-          entity_id:
-            - "switch.bedroom_privacy_mode"
-            - "switch.living_room_privacy_mode"
+      - action: script.manage_camera_privacy
   alex_camera_privacy_home.yaml: |
     alias: "Alex - Camera Privacy (Home)"
     mode: "restart"
@@ -31,16 +22,7 @@ data:
         zone: "zone.home"
         event: "enter"
     actions:
-      - action: "light.turn_off"
-        target:
-          entity_id:
-            - "light.bedroom_status_led"
-            - "light.living_room_status_led"
-      - action: "switch.turn_on"
-        target:
-          entity_id:
-            - "switch.bedroom_privacy_mode"
-            - "switch.living_room_privacy_mode"
+      - action: script.manage_camera_privacy
   alex_cleanup_old_photos.yaml: |
     alias: "Alex - Cleanup Old Photos (30+ days)"
     mode: "single"
@@ -195,40 +177,20 @@ data:
     triggers:
       - trigger: "state"
         entity_id:
-          - "device_tracker.brayan_iphone"
-          - "device_tracker.eirill_iphone"
+          - "group.guests"
         from: "home"
     actions:
-      - action: "light.turn_on"
-        target:
-          entity_id:
-            - "light.bedroom_status_led"
-            - "light.living_room_status_led"
-      - action: "switch.turn_off"
-        target:
-          entity_id:
-            - "switch.bedroom_privacy_mode"
-            - "switch.living_room_privacy_mode"
+      - action: script.manage_camera_privacy
   guest_camera_privacy_wifi_home.yaml: |
     alias: "Guest - Camera Privacy Home (WiFi Connected)"
     mode: "restart"
     triggers:
       - trigger: "state"
         entity_id:
-          - "device_tracker.brayan_iphone"
-          - "device_tracker.eirill_iphone"
+          - "group.guests"
         to: "home"
     actions:
-      - action: "light.turn_off"
-        target:
-          entity_id:
-            - "light.bedroom_status_led"
-            - "light.living_room_status_led"
-      - action: "switch.turn_on"
-        target:
-          entity_id:
-            - "switch.bedroom_privacy_mode"
-            - "switch.living_room_privacy_mode"
+      - action: script.manage_camera_privacy
   pet_water_fountain_alert.yaml: |
     alias: "Pet - Water Fountain Alert"
     mode: single
