--- a/gitops/apps/home-assistant/configuration/automations/guest_camera_privacy_wifi_away.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/guest_camera_privacy_wifi_away.yaml
@@ -3,17 +3,7 @@ mode: "restart"
 triggers:
   - trigger: "state"
     entity_id:
-      - "device_tracker.brayan_iphone"
-      - "device_tracker.eirill_iphone"
+      - "group.guests"
     from: "home"
 actions:
-  - action: "light.turn_on"
-    target:
-      entity_id:
-        - "light.bedroom_status_led"
-        - "light.living_room_status_led"
-  - action: "switch.turn_off"
-    target:
-      entity_id:
-        - "switch.bedroom_privacy_mode"
-        - "switch.living_room_privacy_mode"
+  - action: script.manage_camera_privacy
