--- a/gitops/apps/home-assistant/scripts-configmap.yaml
+++ b/gitops/apps/home-assistant/scripts-configmap.yaml
@@ -128,6 +128,44 @@ data:
             entity_id: input_text.intruder_image_timestamp
           data:
             value: "20251124_163149"
+  manage_camera_privacy.yaml: |
+    manage_camera_privacy:
+      alias: "Manage Camera Privacy"
+      description: "Checks presence of all users and toggles camera privacy mode accordingly. Privacy ON if anyone home, OFF if everyone away."
+      sequence:
+        - if:
+            - condition: or
+              conditions:
+                - condition: state
+                  entity_id: person.alex_merenda
+                  state: "home"
+                - condition: state
+                  entity_id: group.guests
+                  state: "home"
+          then:
+            # Someone is home - Privacy ON (Cameras OFF)
+            - action: light.turn_off
+              target:
+                entity_id:
+                  - light.bedroom_status_led
+                  - light.living_room_status_led
+            - action: switch.turn_on
+              target:
+                entity_id:
+                  - switch.bedroom_privacy_mode
+                  - switch.living_room_privacy_mode
+          else:
+            # Everyone is away - Privacy OFF (Cameras ON)
+            - action: light.turn_on
+              target:
+                entity_id:
+                  - light.bedroom_status_led
+                  - light.living_room_status_led
+            - action: switch.turn_off
+              target:
+                entity_id:
+                  - switch.bedroom_privacy_mode
+                  - switch.living_room_privacy_mode
   power_on.yaml: |
     scheduled_light_on:
       alias: "Scheduled Light On (safe)"
