--- a/gitops/apps/home-assistant/groups-configmap.yaml
+++ b/gitops/apps/home-assistant/groups-configmap.yaml
@@ -9,5 +9,6 @@ data:
       entities:
         - device_tracker.brayan_iphone
         - device_tracker.eirill_iphone
+        - device_tracker.pixel_9_pro_xl_2 # alex phone for testing
       all: false
     
