--- a/gitops/apps/home-assistant/configuration/automations/members_camera_privacy_away.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/members_camera_privacy_away.yaml
@@ -1,10 +1,11 @@
-alias: "Guest - Camera Privacy (WiFi Disconnected)"
+alias: "Members - Camera Privacy (Away)"
 icon: mdi:cctv
 mode: "restart"
 triggers:
   - trigger: "state"
-    entity_id:
-      - "group.guests"
+    entity_id: "group.members"
+    to: "not_home"
     from: "home"
 actions:
   - action: script.manage_camera_privacy
+
