--- a/gitops/apps/home-assistant/configuration/automations/cleanup_old_photos.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/cleanup_old_photos.yaml
@@ -1,4 +1,5 @@
-alias: "Alex - Cleanup Old Photos (30+ days)"
+alias: "System - Cleanup Old Photos (30+ days)"
+icon: mdi:image-remove
 mode: "single"
 triggers:
   - platform: "time"
