--- a/gitops/apps/home-assistant/configuration/automations/members_camera_privacy_home.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/members_camera_privacy_home.yaml
@@ -1,10 +1,11 @@
-alias: "Guest - Camera Privacy Home (WiFi Connected)"
+alias: "Members - Camera Privacy (Home)"
 icon: mdi:cctv-off
 mode: "restart"
 triggers:
   - trigger: "state"
-    entity_id:
-      - "group.guests"
+    entity_id: "group.members"
     to: "home"
+    from: "not_home"
 actions:
   - action: script.manage_camera_privacy
+
