--- a/gitops/apps/home-assistant/configuration/groups.yaml
+++ b/gitops/apps/home-assistant/configuration/groups.yaml
@@ -6,3 +6,8 @@ guests:
     - device_tracker.pixel_9_pro_xl_2 # alex phone for testing
   all: false
 
+members:
+  name: Members
+  entities:
+    - person.alex_merenda
+  all: false
