--- a/gitops/apps/home-assistant/configuration/scripts/manage_camera_privacy.yaml
+++ b/gitops/apps/home-assistant/configuration/scripts/manage_camera_privacy.yaml
@@ -6,7 +6,7 @@ manage_camera_privacy:
         - condition: or
           conditions:
             - condition: state
-              entity_id: person.alex_merenda
+              entity_id: group.members
               state: "home"
             - condition: state
               entity_id: group.guests
