--- a/gitops/apps/home-assistant/automations-configmap.yaml
+++ b/gitops/apps/home-assistant/automations-configmap.yaml
@@ -5,7 +5,10 @@ metadata:
 data:
   alex_reolink_human_detect_alert.yaml: |
     alias: "Alex - Reolink Human Alert (Away)"
-    icon: mdi:account-alert
+    labels:
+      - Security
+      - Notifications
+      - Camera
     mode: "queued"
     triggers:
       - trigger: "state"
@@ -58,7 +61,10 @@ data:
             sticky: true
   alex_reolink_pet_detect_snapshot.yaml: |
     alias: "Alex - Reolink Pet Snapshot (Away)"
-    icon: mdi:paw
+    labels:
+      - Security
+      - Pets
+      - Camera
     mode: "queued"
     triggers:
       - trigger: "state"
@@ -111,7 +117,9 @@ data:
             sticky: true
   alex_update_last_zone.yaml: |
     alias: "Alex - Update Last Significant Zone"
-    icon: mdi:map-marker-path
+    labels:
+      - Presence
+      - Location
     mode: queued
     triggers:
       - trigger: state
@@ -146,7 +154,9 @@ data:
                   message: "Updated last significant zone to: {{ current_zone }}"
   cleanup_old_photos.yaml: |
     alias: "System - Cleanup Old Photos (30+ days)"
-    icon: mdi:image-remove
+    labels:
+      - Maintenance
+      - System
     mode: "single"
     triggers:
       - platform: "time"
@@ -157,7 +167,10 @@ data:
         data: {}
   guest_camera_privacy_wifi_away.yaml: |
     alias: "Guest - Camera Privacy (WiFi Disconnected)"
-    icon: mdi:cctv
+    labels:
+      - Security
+      - Privacy
+      - Guests
     mode: "restart"
     triggers:
       - trigger: "state"
@@ -168,7 +181,10 @@ data:
       - action: script.manage_camera_privacy
   guest_camera_privacy_wifi_home.yaml: |
     alias: "Guest - Camera Privacy Home (WiFi Connected)"
-    icon: mdi:cctv-off
+    labels:
+      - Security
+      - Privacy
+      - Guests
     mode: "restart"
     triggers:
       - trigger: "state"
@@ -179,7 +195,10 @@ data:
       - action: script.manage_camera_privacy
   members_camera_privacy_away.yaml: |
     alias: "Members - Camera Privacy (Away)"
-    icon: mdi:cctv
+    labels:
+      - Security
+      - Privacy
+      - Members
     mode: "restart"
     triggers:
       - trigger: "state"
@@ -188,10 +207,12 @@ data:
         from: "home"
     actions:
       - action: script.manage_camera_privacy
-    
   members_camera_privacy_home.yaml: |
     alias: "Members - Camera Privacy (Home)"
-    icon: mdi:cctv-off
+    labels:
+      - Security
+      - Privacy
+      - Members
     mode: "restart"
     triggers:
       - trigger: "state"
@@ -200,10 +221,12 @@ data:
         from: "not_home"
     actions:
       - action: script.manage_camera_privacy
-    
   pet_water_fountain_alert.yaml: |
     alias: "Pet - Water Fountain Alert"
-    icon: mdi:water-alert
+    labels:
+      - Pets
+      - Maintenance
+      - Notifications
     mode: single
     triggers:
       - trigger: state
