--- a/gitops/apps/home-assistant/configuration/automations/alex_reolink_human_detect_alert.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/alex_reolink_human_detect_alert.yaml
@@ -1,5 +1,8 @@
 alias: "Alex - Reolink Human Alert (Away)"
-icon: mdi:account-alert
+labels:
+  - Security
+  - Notifications
+  - Camera
 mode: "queued"
 triggers:
   - trigger: "state"
