--- a/gitops/apps/home-assistant/configuration/automations/alex_reolink_pet_detect_snapshot.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/alex_reolink_pet_detect_snapshot.yaml
@@ -1,5 +1,8 @@
 alias: "Alex - Reolink Pet Snapshot (Away)"
-icon: mdi:paw
+labels:
+  - Security
+  - Pets
+  - Camera
 mode: "queued"
 triggers:
   - trigger: "state"
