--- a/gitops/apps/home-assistant/configuration/automations/alex_update_last_zone.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/alex_update_last_zone.yaml
@@ -1,5 +1,7 @@
 alias: "Alex - Update Last Significant Zone"
-icon: mdi:map-marker-path
+labels:
+  - Presence
+  - Location
 mode: queued
 triggers:
   - trigger: state
