--- a/gitops/apps/home-assistant/configuration/automations/guest_camera_privacy_wifi_away.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/guest_camera_privacy_wifi_away.yaml
@@ -1,5 +1,8 @@
 alias: "Guest - Camera Privacy (WiFi Disconnected)"
-icon: mdi:cctv
+labels:
+  - Security
+  - Privacy
+  - Guests
 mode: "restart"
 triggers:
   - trigger: "state"
