--- a/gitops/apps/home-assistant/configuration/automations/guest_camera_privacy_wifi_home.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/guest_camera_privacy_wifi_home.yaml
@@ -1,5 +1,8 @@
 alias: "Guest - Camera Privacy Home (WiFi Connected)"
-icon: mdi:cctv-off
+labels:
+  - Security
+  - Privacy
+  - Guests
 mode: "restart"
 triggers:
   - trigger: "state"
