--- a/gitops/apps/home-assistant/configuration/automations/members_camera_privacy_away.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/members_camera_privacy_away.yaml
@@ -1,5 +1,8 @@
 alias: "Members - Camera Privacy (Away)"
-icon: mdi:cctv
+labels:
+  - Security
+  - Privacy
+  - Members
 mode: "restart"
 triggers:
   - trigger: "state"
@@ -8,4 +11,3 @@ triggers:
     from: "home"
 actions:
   - action: script.manage_camera_privacy
-
