--- a/gitops/apps/home-assistant/configuration/automations/pet_water_fountain_alert.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/pet_water_fountain_alert.yaml
@@ -1,5 +1,8 @@
 alias: "Pet - Water Fountain Alert"
-icon: mdi:water-alert
+labels:
+  - Pets
+  - Maintenance
+  - Notifications
 mode: single
 triggers:
   - trigger: state
